# OpenAssetIO-ComfyUI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  build_pipeline.yml  publish_node.yml  validate.yml  validate.yml.disabled
src/openassetio_comfyui/: __init__.py  nodes.py
tests/: __init__.py  conftest.py  pytest.ini  test_openassetio_comfyui.py
tests/resources/: bal_db.json  openassetio_config.toml
