[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openassetio-comfyui"
version = "1.0.0"
description = "ComfyUI custom nodes adding asset resolution and publishing via OpenAssetIO"
authors = [
    { name = "Contributors to the OpenAssetIO project", email = "openassetio-discussion@lists.aswf.io" }
]
readme = "README.md"
license = { text = "Apache Software License 2.0" }
requires-python = ">=3.10,<3.12"
classifiers = []
dependencies = []


[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage", # testing
    "mypy", # linting
    "pre-commit", # runs linting on commit
    "pytest", # testing
    "ruff", # linting
]

[project.urls]
Repository = "https://github.com/OpenAssetIO/OpenAssetIO-ComfyUI"
BugTracker = "https://github.com/OpenAssetIO/OpenAssetIO-ComfyUI/issues"
Documentation = "https://github.com/OpenAssetIO/OpenAssetIO-ComfyUI/wiki"


[tool.comfy]
PublisherId = "OpenAssetIO"
DisplayName = "OpenAssetIO"
Icon = ""
Tags = []
Repository = "https://github.com/OpenAssetIO/OpenAssetIO-ComfyUI"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py311"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102", # exec-builtin
    "S307", # eval-used
    "W293",
    "F", # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
